--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       border: 1px solid #ccc;
       margin-top: 5px;
     }
-    .ticket-buttons {
+    .ticket-buttons, .quantite-buttons {
       display: flex;
       justify-content: space-around;
       gap: 10px;
       margin-bottom: 10px;
     }
-    .ticket-buttons button {
+    .ticket-buttons button, .quantite-buttons button {
       flex: 1;
       padding: 15px;
       font-size: 1.1em;
@@ -52,7 +52,8 @@
       color: white;
       background-color: #4CAF50;
     }
-    .ticket-buttons button.selected {
+    .ticket-buttons button.selected,
+    .quantite-buttons button.selected {
       background-color: #388E3C;
     }
     button {
@@ -102,7 +103,14 @@
   </div>
 
   <div class="champ">
-    <label for="quantite">Nombre de tickets :</label>
+    <label>Nombre de tickets :</label>
+    <div class="quantite-buttons">
+      <button onclick="selectQuantite(1)">1</button>
+      <button onclick="selectQuantite(2)">2</button>
+      <button onclick="selectQuantite(3)">3</button>
+      <button onclick="selectQuantite(4)">4</button>
+      <button onclick="selectQuantite(5)">5</button>
+    </div>
     <input type="number" id="quantite" min="1" value="1">
   </div>
 
@@ -144,6 +152,13 @@
       }
     }
 
+    function selectQuantite(q) {
+      document.getElementById('quantite').value = q;
+      document.querySelectorAll('.quantite-buttons button').forEach(btn => btn.classList.remove('selected'));
+      const buttons = document.querySelectorAll('.quantite-buttons button');
+      buttons[q - 1].classList.add('selected');
+    }
+
     function calculer() {
       const quantite = parseInt(document.getElementById('quantite').value);
       const somme = parseFloat(document.getElementById('somme').value) || 0;
@@ -170,7 +185,7 @@
 
     function resetForm() {
       selectTicket(1.3);
-      document.getElementById('quantite').value = 1;
+      selectQuantite(1);
       document.getElementById('somme').value = "";
       document.getElementById('resultat').innerHTML = "";
     }
