--- a/index.html
+++ b/index.html
@@ -1,112 +1,96 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Calcul Monnaie</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Rendu Monnaie</title>
   <style>
     body {
       font-family: sans-serif;
       padding: 20px;
       max-width: 480px;
       margin: auto;
-      background-color: #f9f9f9;
+      background: #f0f0f0;
     }
     h1 {
       text-align: center;
       color: #333;
     }
     .champ {
-      background-color: #fff;
-      border: 1px solid #ccc;
-      border-radius: 10px;
+      background: #fff;
       padding: 15px;
+      border-radius: 10px;
       margin-bottom: 15px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
     label {
       font-weight: bold;
-      margin-bottom: 5px;
       display: block;
+      margin-bottom: 8px;
     }
-    .ticket-buttons, .quantite-buttons {
+    .ticket-row, .quantite-row, .somme-row {
       display: flex;
-      flex-wrap: wrap;
+      align-items: stretch;
       gap: 10px;
-      justify-content: center;
     }
-    .ticket-buttons button, .quantite-buttons button {
-      flex: 1 1 40%;
-      min-width: 80px;
-      padding: 15px;
-      font-size: 1.2em;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      background-color: #4CAF50;
-    }
-    .ticket-buttons button.selected,
-    .quantite-buttons button.selected {
-      background-color: #388E3C;
-    }
-    .quantite-row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-top: 10px;
-    }
-    .inline-result {
-      font-size: 1.8em;
-      font-weight: bold;
-    }
-    .pieces-row {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-    .pieces {
+    .ticket-buttons, .quantite-buttons, .pieces {
       display: flex;
       flex-wrap: wrap;
       gap: 5px;
       flex: 1;
     }
-    .pieces button {
-      width: 70px;
-      padding: 10px;
-      background-color: #2196F3;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 1em;
-    }
-    #sommeAffiche {
-      font-size: 1.8em;
-      font-weight: bold;
+    .ticket-buttons button, .quantite-buttons button, .pieces button {
+      flex: 1 1 45%;
       min-width: 80px;
-      text-align: right;
+      padding: 15px;
+      font-size: 1.2em;
+      border: none;
+      border-radius: 8px;
+      background: #4CAF50;
+      color: white;
+    }
+    .ticket-buttons button.selected {
+      background: #2E7D32;
+      font-weight: bold;
+      box-shadow: 0 0 10px #2E7D32;
+    }
+    .quantite-result, .somme-result {
+      min-width: 80px;
+      background: #e0e0e0;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2em;
+      font-weight: bold;
+      padding: 10px;
+    }
+    .pieces button {
+      padding: 10px;
+      font-size: 1em;
+      background: #2196F3;
     }
     .actions {
       display: flex;
       gap: 10px;
-      margin-top: 15px;
+      margin-top: 10px;
     }
     .actions button {
       flex: 1;
-      padding: 20px;
       font-size: 2em;
+      padding: 20px;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
       color: white;
     }
     .cal {
-      background-color: #4CAF50;
+      background: #4CAF50;
     }
     .zero {
-      background-color: #f44336;
+      background: #f44336;
     }
     .resultat {
-      margin-top: 20px;
+      margin-top: 15px;
       font-size: 1.5em;
       text-align: center;
     }
@@ -117,29 +101,31 @@
 
   <div class="champ">
     <label>Type de ticket :</label>
-    <div class="ticket-buttons">
-      <button id="btn1h" onclick="selectTicket(1.3)">1,30 €</button>
-      <button id="btn1j" onclick="selectTicket(3)">3 €</button>
+    <div class="ticket-row">
+      <div class="ticket-buttons">
+        <button id="btn1h" onclick="selectTicket(1.3)">1,30 €</button>
+        <button id="btn1j" onclick="selectTicket(3)">3 €</button>
+      </div>
     </div>
   </div>
 
   <div class="champ">
     <label>Nombre de tickets :</label>
-    <div class="quantite-buttons">
-      <button onclick="selectQuantite(1)">1</button>
-      <button onclick="selectQuantite(2)">2</button>
-      <button onclick="selectQuantite(3)">3</button>
-      <button onclick="selectQuantite(4)">4</button>
-      <button onclick="selectQuantite(5)">5</button>
-    </div>
     <div class="quantite-row">
-      <div class="inline-result" id="quantiteAffiche">x1</div>
+      <div class="quantite-buttons">
+        <button onclick="selectQuantite(1)">1</button>
+        <button onclick="selectQuantite(2)">2</button>
+        <button onclick="selectQuantite(3)">3</button>
+        <button onclick="selectQuantite(4)">4</button>
+        <button onclick="selectQuantite(5)">5</button>
+      </div>
+      <div class="quantite-result" id="quantiteAffiche">x1</div>
     </div>
   </div>
 
   <div class="champ">
     <label>Somme donnée :</label>
-    <div class="pieces-row">
+    <div class="somme-row">
       <div class="pieces">
         <button onclick="ajouterMontant(0.01)">0,01</button>
         <button onclick="ajouterMontant(0.02)">0,02</button>
@@ -152,7 +138,7 @@
         <button onclick="ajouterMontant(5)">5</button>
         <button onclick="ajouterMontant(10)">10</button>
       </div>
-      <div id="sommeAffiche">0.00 €</div>
+      <div class="somme-result" id="sommeAffiche">0.00 €</div>
     </div>
   </div>
 
@@ -170,8 +156,7 @@
 
     function selectTicket(value) {
       ticketType = value;
-      document.getElementById('btn1h').classList.remove('selected');
-      document.getElementById('btn1j').classList.remove('selected');
+      document.querySelectorAll('.ticket-buttons button').forEach(b => b.classList.remove('selected'));
       if (value === 1.3) {
         document.getElementById('btn1h').classList.add('selected');
       } else {
@@ -182,9 +167,8 @@
     function selectQuantite(q) {
       currentQuantite = q;
       document.getElementById('quantiteAffiche').innerText = 'x' + q;
-      document.querySelectorAll('.quantite-buttons button').forEach(btn => btn.classList.remove('selected'));
-      const buttons = document.querySelectorAll('.quantite-buttons button');
-      buttons[q - 1].classList.add('selected');
+      document.querySelectorAll('.quantite-buttons button').forEach(b => b.classList.remove('selected'));
+      document.querySelectorAll('.quantite-buttons button')[q - 1].classList.add('selected');
     }
 
     function ajouterMontant(valeur) {
