--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     body {
       font-family: sans-serif;
       padding: 10px;
-      max-width: 100%;
       margin: auto;
       background: #f0f0f0;
+      max-width: 480px;
     }
     h1 {
       text-align: center;
@@ -30,18 +30,28 @@
       margin-bottom: 5px;
       font-size: 1em;
     }
-    .ticket-row, .quantite-row, .somme-row {
+    .row {
       display: flex;
       align-items: center;
-      flex-wrap: wrap;
       gap: 5px;
+      flex-wrap: wrap;
     }
-    .ticket-buttons, .quantite-buttons, .pieces {
+    .result-box {
+      min-width: 70px;
+      background: #e0e0e0;
+      border-radius: 8px;
+      text-align: center;
+      font-size: 1.5em;
+      font-weight: bold;
+      padding: 5px;
+    }
+    .buttons {
       display: flex;
       flex-wrap: wrap;
       gap: 5px;
+      flex: 1;
     }
-    .ticket-buttons button, .quantite-buttons button, .pieces button {
+    .buttons button {
       flex: 1 1 45%;
       min-width: 60px;
       padding: 10px;
@@ -51,25 +61,10 @@
       background: #4CAF50;
       color: white;
     }
-    .ticket-buttons button.selected {
+    .buttons button.selected {
       background: #2E7D32;
       font-weight: bold;
       box-shadow: 0 0 8px #2E7D32;
-    }
-    .quantite-result, .somme-result {
-      min-width: 70px;
-      background: #e0e0e0;
-      border-radius: 8px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.5em;
-      font-weight: bold;
-      padding: 5px;
-    }
-    .quantite-row, .somme-row {
-      flex-direction: row-reverse;
-      justify-content: space-between;
     }
     .actions {
       display: flex;
@@ -118,19 +113,17 @@
   <div id="pagePrincipale">
     <div class="champ">
       <label>Type de ticket :</label>
-      <div class="ticket-row">
-        <div class="ticket-buttons">
-          <button id="btn1h" onclick="selectTicket(1.3)">1,30 €</button>
-          <button id="btn1j" onclick="selectTicket(3)">3 €</button>
-        </div>
+      <div class="buttons">
+        <button id="btn1h" onclick="selectTicket(1.3)">1,30 €</button>
+        <button id="btn1j" onclick="selectTicket(3)">3 €</button>
       </div>
     </div>
 
     <div class="champ">
       <label>Nombre de tickets :</label>
-      <div class="quantite-row">
-        <div class="quantite-result" id="quantiteAffiche">x1</div>
-        <div class="quantite-buttons">
+      <div class="row">
+        <div class="result-box" id="quantiteAffiche">x1</div>
+        <div class="buttons">
           <button onclick="selectQuantite(1)">1</button>
           <button onclick="selectQuantite(2)">2</button>
           <button onclick="selectQuantite(3)">3</button>
@@ -142,9 +135,9 @@
 
     <div class="champ">
       <label>Somme donnée :</label>
-      <div class="somme-row">
-        <div class="somme-result" id="sommeAffiche">0.00 €</div>
-        <div class="pieces">
+      <div class="row">
+        <div class="result-box" id="sommeAffiche">0.00 €</div>
+        <div class="buttons">
           <button onclick="ajouterMontant(0.01)">0,01</button>
           <button onclick="ajouterMontant(0.02)">0,02</button>
           <button onclick="ajouterMontant(0.05)">0,05</button>
@@ -180,7 +173,7 @@
 
     function selectTicket(value) {
       ticketType = value;
-      document.querySelectorAll('.ticket-buttons button').forEach(b => b.classList.remove('selected'));
+      document.querySelectorAll('.buttons button').forEach(b => b.classList.remove('selected'));
       if (value === 1.3) {
         document.getElementById('btn1h').classList.add('selected');
       } else {
@@ -191,8 +184,6 @@
     function selectQuantite(q) {
       currentQuantite = q;
       document.getElementById('quantiteAffiche').innerText = 'x' + q;
-      document.querySelectorAll('.quantite-buttons button').forEach(b => b.classList.remove('selected'));
-      document.querySelectorAll('.quantite-buttons button')[q - 1].classList.add('selected');
     }
 
     function ajouterMontant(valeur) {
@@ -226,7 +217,6 @@
       selectTicket(1.3);
       selectQuantite(1);
       document.getElementById('sommeAffiche').innerText = '0.00 €';
-
       document.getElementById('pageResultat').style.display = 'none';
       document.getElementById('pagePrincipale').style.display = 'block';
     }
