--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       background: #4CAF50;
       color: white;
     }
+    .buttons button.zero-btn {
+      background: #f44336;
+    }
     .buttons button.selected {
       background: #2E7D32;
       font-weight: bold;
@@ -81,9 +84,6 @@
     }
     .cal {
       background: #4CAF50;
-    }
-    .zero {
-      background: #f44336;
     }
     .resultat-page {
       text-align: center;
@@ -129,6 +129,7 @@
           <button onclick="selectQuantite(3)">3</button>
           <button onclick="selectQuantite(4)">4</button>
           <button onclick="selectQuantite(5)">5</button>
+          <button class="zero-btn" onclick="resetQuantite()">Zero</button>
         </div>
       </div>
     </div>
@@ -148,6 +149,7 @@
           <button onclick="ajouterMontant(2)">2</button>
           <button onclick="ajouterMontant(5)">5</button>
           <button onclick="ajouterMontant(10)">10</button>
+          <button class="zero-btn" onclick="resetSomme()">Zero</button>
         </div>
       </div>
     </div>
@@ -186,11 +188,19 @@
       document.getElementById('quantiteAffiche').innerText = 'x' + q;
     }
 
+    function resetQuantite() {
+      selectQuantite(1);
+    }
+
     function ajouterMontant(valeur) {
       const sommeAffiche = document.getElementById('sommeAffiche');
       let actuel = parseFloat(sommeAffiche.innerText) || 0;
       let nouveau = (actuel + valeur).toFixed(2);
       sommeAffiche.innerText = nouveau + ' €';
+    }
+
+    function resetSomme() {
+      document.getElementById('sommeAffiche').innerText = '0.00 €';
     }
 
     function getSommeActuelle() {
@@ -215,8 +225,8 @@
 
     function resetForm() {
       selectTicket(1.3);
-      selectQuantite(1);
-      document.getElementById('sommeAffiche').innerText = '0.00 €';
+      resetQuantite();
+      resetSomme();
       document.getElementById('pageResultat').style.display = 'none';
       document.getElementById('pagePrincipale').style.display = 'block';
     }
